<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="joeltio.thoughts.CreateThoughtActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/thought_fields_internal_padding">
        <EditText
            android:id="@+id/thought_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/thought_field_name_hint"
            android:layout_marginTop="@dimen/thought_field_vertical_margin"
            android:layout_marginBottom="@dimen/thought_field_vertical_margin"
            android:layout_marginStart="@dimen/thought_field_horizontal_margin"
            android:layout_marginEnd="@dimen/thought_field_horizontal_margin" />
        <EditText
            android:id="@+id/thought_body_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/thought_field_body_hint"
            android:minHeight="@dimen/thought_body_field_height"
            android:gravity="top"
            android:layout_marginTop="@dimen/thought_field_vertical_margin"
            android:layout_marginBottom="@dimen/thought_field_vertical_margin"
            android:layout_marginStart="@dimen/thought_field_horizontal_margin"
            android:layout_marginEnd="@dimen/thought_field_horizontal_margin" />
        <EditText
            android:id="@+id/thought_tags_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/thought_field_tags_hint"
            android:layout_marginTop="@dimen/thought_field_vertical_margin"
            android:layout_marginBottom="@dimen/thought_field_vertical_margin"
            android:layout_marginStart="@dimen/thought_field_horizontal_margin"
            android:layout_marginEnd="@dimen/thought_field_horizontal_margin" />
    </LinearLayout>
</ScrollView>
